--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1>@ViewData["Greeting"]</h1>
+    <h1 class="display-4">@Localizer.Getkey("lbl_Home")</h1> <!-- Accessing Getkey method of LanguageService -->
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
