--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+                            Localization
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a asp-controller="Home" asp-action="ChangeLanguage" asp-route-culture="ar-Jo" class="dropdown-item"><i class="flag-icon flag-icon-gb"></i>English </a></li>
+                            <li><a asp-controller="Home" asp-action="ChangeLanguage" asp-route-culture="en-US" class="dropdown-item"><i class="flag-icon flag-icon-gb"></i> Arabic </a></li>
+                            <li><a asp-controller="Home" asp-action="ChangeLanguage" asp-route-culture="fr-FR" class="dropdown-item"><i class="flag-icon flag-icon-gb"></i> French</a></li>
+                        </ul>
+                    </div>
+
+
                 </div>
             </div>
         </nav>
