--- a/Views/Shared/Components/_Nav.cshtml
+++ b/Views/Shared/Components/_Nav.cshtml
@@ -25,6 +25,12 @@
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
 
+        <!-- Theam Dropdown Menu -->
+        <div class="form-check form-switch mx-4">
+            <input class="form-check-input" type="checkbox" role="switch" id="darkmood">
+            <label class="form-check-label" for="darkmood">darkmood</label>
+        </div>
+
         <!-- ChangeLang Dropdown Menu -->
         <li class="nav-item dropdown">
             <div class="dropdown">
