--- a/Views/Shared/Components/_Sidebar.cshtml
+++ b/Views/Shared/Components/_Sidebar.cshtml
@@ -1,15 +1,20 @@
-﻿<aside class="main-sidebar sidebar-light-primary elevation-1">
+﻿<aside class="main-sidebar sidebar-light-success elevation-1">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-        <span class="brand-text font-weight-light">AdminLTE 3</span>
+
+    <a href="index3.html" class="brand-link" style="height: 4.55rem;">
+        <img src="/assetsnest/logo/HRLogo2.png"
+             alt="NEST HR Logo"
+             class="brand-image img-circle"
+             style="max-width: 4rem; width: 4rem;max-height:4rem;height:59px !important;margin-left:0!important" />
+        <span class="brand-text font-weight-light" style="font-family:Perpetua Titling MT;font-size:2rem">NEST</span>
     </a>
-
+   
     <!-- Sidebar -->
-    <div class="sidebar">
-
+    <div class="sidebar os-theme-dark pt-4">
+   
         <!-- SidebarSearch Form -->
-        <div class="form-inline">
-            <div class="input-group mt-1" data-widget="sidebar-search">
+        <div class="form-inline mt-2">
+            <div class="input-group" data-widget="sidebar-search">
                 <input class="form-control form-control-sidebar"
                        type="search"
                        placeholder="Search"
