--- a/Views/Shared/Components/_Sidebar.cshtml
+++ b/Views/Shared/Components/_Sidebar.cshtml
@@ -105,4 +105,7 @@
     <!-- /.sidebar -->
 </aside>
 
-<script src="~/nestadmintemplet/js/Sidebar.js"></script>
+@* <script src="~/nestadmintemplet/js/Sidebar.js"></script> *@
+<script src="~/nestadmintemplet/js/treeview.js"></script>
+<script src="~/nestadmintemplet/js/pushmenu.js"></script>
+<script src="~/nestadmintemplet/js/sidebarsearch.js"></script>
