--- a/Views/Shared/Components/_Nav.cshtml
+++ b/Views/Shared/Components/_Nav.cshtml
@@ -1,13 +1,11 @@
 ﻿
 <nav class="main-header navbar navbar-expand navbar-white navbar-light text-sm">
     <!-- Left navbar links -->
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#" role="button">
+
+            <a class="mx-2" data-widget="pushmenu" href="#" role="button" id="sidebarToggle">
                 <i class="fas fa-bars"></i>
             </a>
-        </li>
-    </ul>
+   
 
     <div class="content-header mt-1  navbar-nav me-auto  mb-lg-0">
         <div class="container-fluid">
